--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:600,300,100|Open+Sans+Condensed:300);
 @import url(https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 * .logo {
   font-family: Open Sans Condensed, sans-serif;
   font-size: 40px;
@@ -121,7 +127,7 @@ main {
   justify-content: center;
 }
 
-.mytooltip {
+/* .mytooltip {
   display: inline;
   position: relative;
   z-index: 999;
@@ -181,4 +187,88 @@ main {
   color: #ffffff;
   font-weight: bold;
 }
+ */
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: visible;
+  gap: 0.4rem;
+  width: 400px;
+  padding: 1.3rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  transform: translate(-50%, -80%);
+}
 
+.modal .flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal input {
+  padding: 0.7rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 0.9em;
+}
+
+.modal p {
+  font-size: 0.9rem;
+  color: #777;
+  margin: 0.4rem 0 0.2rem;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  font-weight: 600;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.8rem 1.4rem;
+  font-weight: 700;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 1em;
+}
+
+.btn-open {
+  display: inline-block;
+}
+
+.btn-close {
+  transform: translate(10px, -20px);
+  padding: 0.5rem 0.7rem;
+  background: #eee;
+  border-radius: 50%;
+}
+
+/* .overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+} */
+
+.modal {
+  z-index: 2;
+}
+
+.hidden {
+  display: none;
+}
